<resources>
    <string name="app_name">Pill Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="parent">Parent</string>
    <string name="state">State</string>
    <string name="description">Description</string>
    <string name="connection_failure">No se ha podido establecer una conexión</string>

</resources>